# dac-operator

./: .releaserc  README.md  Taskfile.yaml  Tiltfile
.github/workflows/: publish.yml  release.yml
chart/: Chart.yaml  values.yaml
chart/templates/: certs.yaml  operator.yaml  rbac.yaml  webhook-config.yaml
docs/: BOOTSTRAP.md  CERTIFICATES.md  SPLUNK.md
python/: .gitignore  Dockerfile  pyproject.toml
python/dac_operator/: config.py  operator.py  providers.py
python/dac_operator/crd/: crd_models.py
python/dac_operator/ext/: kubernetes_client.py  kubernetes_exceptions.py  kubernetes_models.py
python/dac_operator/handlers/microsoft_sentinel/analytic_rules/: analytic_rule_timers.py
python/dac_operator/handlers/microsoft_sentinel/automation_rules/: automation_rule_timers.py  automation_rule_validators.py
python/dac_operator/handlers/splunk/detection_rules/: detection_rule_timer_handlers.py
python/dac_operator/microsoft_sentinel/: microsoft_sentinel_exceptions.py  microsoft_sentinel_macro_service.py  microsoft_sentinel_models.py  microsoft_sentinel_repository.py  microsoft_sentinel_service.py
python/dac_operator/microsoft_sentinel/models/: create_automation_rule.py
python/dac_operator/splunk/: splunk_exceptions.py  splunk_models.py  splunk_repository.py  splunk_service.py
rust/: Cargo.toml
rust/src/: main.rs
rust/src/crds/: example_crd_template.rs  microsoft_sentinel_analytic_rule.rs  microsoft_sentinel_automation_rule.rs  microsoft_sentinel_macro.rs  microsoft_sentinel_workbook.rs  mod.rs  splunk_detection_rule.rs
(+2 files in other folders)
