[project]
name = "dac-cli"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.19.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "openapi-pydantic>=0.5.1",
    "pyyaml>=6.0.2",
    "kubernetes>=32.0.1",
    "jsonschema>=4.23.0",
    "kopf>=1.37.4",
    "splunk-sdk>=2.1.0",
]

[tool.ruff]
select = ["E4", "E5", "E7", "E9", "F"]
line-length = 88

[tool.ruff.lint]
unfixable = ["F401", "F841"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]

[tool.hatch.build.targets.wheel]
packages = ["dac_operator"]
