[package]
name = "dac-crd-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.98.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube-derive = "0.87"  # ✅ Add this line
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
schemars = "0.8"

